* mk5dir: no seg fault if cannot open output file
* Adopt scripts listcpus and listmodules from calcif2 as this is a more natural home.
* mk5erase: new option to overwrite module partition.  Might be useful for firmware upgrades.
* Change .rpm filename to vlbi-mk5daemon.*.rpm
* mk5cp: report average data rate and total bytes copied.  Use replaced byte counter with lower false detection rate.

Version 2.4.0
~~~~~~~~~~~~~
* mk5putdir: replace based on binary file / have ability to change version number
* mk5daemon: add ability to kill a specific job. Invoke with:  mk5control "killmpifxcorr jobId" all
* New utility  killjob  which executes: mk5control "killmpifxcorr jobId" all
* When looking at incoming command messages (monitor.cpp), check against all local addresses, not just the "hostname"
* mk5erase: ask before continuing on write-protected module (even if force is specified)
* mk5dir: save a copy of the binary directory as well as the decoded directory
* Revamped support for Mark5 directory structures: vsn, mk5dir
* mk5erase: if MARK5_CONDITION_PATH env var is set, write conditioning results to file within that path.
* Version for DiFX-2.4, Nov 4, 2014

Version 2.3.0
~~~~~~~~~~~~~
* mk5dir: support SDK9 legacy directories (as per DIMINO 2.2.1 w/ SDK 9.2)
* mk5cp: add mode to "fix" Mark5B format scans
* mk5putdir: new utility: replace the on-disk directory
* mark5 utilities: normalize use of RT mode a bit
* mk5dir: default: operate without RT mode
* mk5dir: detect unusual data while decoding directories, namely data where the payload contains a repeating pattern.
* mk5test: new utility: use XLRSelfTest to test a Streamstor card
* mk5dir: better VDIF support
* Version for DiFX-2.3, Dec 20, 2013

Version 2.2.0
~~~~~~~~~~~~~
* Speed up directory reading
* Better .rpm infrastructure
* IPv6 support added to VSI interface; the whole package at this point is likely IPv6 compliant.
* Count network traffic from all interfaces, not just eth* and ib*.  lo is ignored.